--- a/views/index.ejs
+++ b/views/index.ejs
@@ -137,7 +137,7 @@
 
               <h5 class="card-title">Remember To Vaccinate</h5>
               <p class="card-text">Get your account registered and see child details with due dates of vaccination. Get scheduled reminders when a vaccine gets due</p>
-              <button type="button" class="btn btn-outline-danger fea-btn">Register</button>
+              <a href="<iframe width="640" height="480" src="https://embed.wotnot.io/52Hug2F3Ggi60320524952407bLyPGYR/bot/8KyUFX5RZBMR0321390848965BeAggGc?display_header=false&history_retention=false" frameborder="0"></iframe>"<button type="button" class="btn btn-outline-danger fea-btn">Register</button></a>
             </div>
           </div>
         </div>
@@ -165,7 +165,7 @@
               <p>
 
               </p>
-              <button type="button" class="btn btn-outline-danger fea-btn">Download</button>
+              <a href="<iframe width="640" height="480" src="https://embed.wotnot.io/52Hug2F3Ggi60320524952407bLyPGYR/bot/8KyUFX5RZBMR0321390848965BeAggGc?display_header=false&history_retention=false" frameborder="0"></iframe>"><button type="button" class="btn btn-outline-danger fea-btn">Download</button></a>
             </div>
           </div>
         </div>
